[project]
name = "isl-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "GiboCShore",email = "jesus.aguirre@codeshore.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]

[tool.poetry]
packages = [{include = "isl_labs", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
